--- a/css/style1.css
+++ b/css/style1.css
@@ -22,7 +22,7 @@ body {
 .player-logo img {
     width: 120px;
     height: auto;
-    margin-bottom: 15px;
+    margin-left: 15px;
     border-radius: 8px;
 }
 
