--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,16 @@ body {
     font-family: 'Flamenco-Regular', sans-serif; /* Используем кастомный шрифт */
 }
 
+h4 {
+    margin-top: 10px; /* Уменьшаем верхний отступ */
+    margin-bottom: 10px; /* Уменьшаем нижний отступ */
+}
+
 /* Основной контейнер плеера */
 .player-container {
     position: relative;
     width: 400px;
-    height: 500px; /* Общая высота плеера */
+    height: 700px; /* Общая высота плеера */
     padding: 40px;
     background-color: #EAF0F5;
     border-radius: 15px;
@@ -42,7 +47,7 @@ body {
     justify-content: flex-end; /* Это заставляет контент прилипнуть к нижней части */
     height: 100%; /* Полная высота родительского контейнера */
     position: relative;
-    margin-top: -20px; /* Поднимает секцию вверх */
+    margin-top: -50px; /* Поднимает секцию вверх */
 }
 
 .left-section h1 {
@@ -84,10 +89,10 @@ body {
 /* Логотип наложенный сверху */
 .logo-overlay {
     position: absolute;
-    top: 40px; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
-    left: -20px; /* Сдвиг влево */
-    width: 310px; /* Ширина логотипа */
-    height: 310px;
+    top: -3%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
+    left: 40px; /* Сдвиг влево */
+    width: 250px; /* Ширина логотипа */
+    height: 250px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6); /* Тень вокруг логотипа */
     border-radius: 7%; /* Закругленные углы для логотипа */
     z-index: 10; /* Разместить поверх других элементов */
@@ -100,7 +105,7 @@ body {
     background-color: transparent; /* Убираем фон */
     padding: 70;
     cursor: pointer;
-    margin-top: 80px; /* Поднимает кнопку вверх */
+    margin-top: 50px; /* Поднимает кнопку вверх */
 }
 
 .image-container {
@@ -131,12 +136,11 @@ body {
 
 #song-info {
     font-size: 18px;
-    white-space: normal; /* Разрешаем перенос текста */
-    overflow: hidden;
-    text-overflow: ellipsis;
+    max-width: 100%; /* Ограничиваем ширину */
+    white-space: normal; /* Позволяем перенос строк */
+    overflow: hidden; /* Скрываем переполнение */
+    line-height: 1.2em; /* Устанавливаем высоту строки */
     word-wrap: break-word; /* Переносим длинные слова */
-    text-align: center; /* Выравнивание текста по центру */
-    margin-top: 0; /* Убираем отступ сверху */
 }
 
 
@@ -145,19 +149,44 @@ body {
     display: flex;
     flex-direction: column; /* Отображаем иконки в столбик */
     justify-content: center;
-    margin-top: 10px;
+    margin-top: -420px;
 }
 
 .social-icons a {
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 .social-icons img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     transition: transform 0.3s ease;
 }
 
 .social-icons img:hover {
     transform: scale(1.1); /* Увеличение при наведении */
+}
+
+/* История треков */
+.history-list {
+    height: 250px; /* Фиксированная высота для пяти треков */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Выравниваем треки по верхней части */
+}
+
+.history-item {
+    display: flex;
+    align-items: center;
+    height: 45px; /* Уменьшаем высоту для каждого трека */
+    margin-bottom: 20px; /* Уменьшаем отступ между треками */
+}
+
+.history-thumbnail {
+    width: 45px;
+    height: 45px;
+    margin-right: 5px;
+}
+
+.history-info {
+    font-size: 14px;
 }
