--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 body {
     background-color: #D8E1EC; /* Устанавливаем цвет фона для всей страницы */
-    font-size: 150%; /* Увеличиваем все шрифты на 20% */
+    font-size: 150%; 
 }
 
 @font-face {
-    font-family: 'Flamenco-Regular'; /* Имя кастомного шрифта */
-    src: url('../fonts/Flamenco-Regular.ttf') format('truetype'); /* Путь к вашему шрифту */
+    font-family: 'Flamenco-Regular'; 
+    src: url('../fonts/Flamenco-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 body {
-    font-family: 'Flamenco-Regular', sans-serif; /* Используем кастомный шрифт */
+    font-family: 'Flamenco-Regular', sans-serif;
 }
 
 h4 {
@@ -23,9 +23,9 @@ h4 {
 .player-container {
     position: relative;
     width: 400px;
-    height: 700px; /* Общая высота плеера */
+    height: 710px; /* Общая высота плеера */
     padding: 40px;
-    background-color: #EAF0F5;
+    background-color: #D8E1EC;
     border-radius: 15px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
     margin: 50px auto;
@@ -44,7 +44,7 @@ h4 {
 .left-section {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; /* Это заставляет контент прилипнуть к нижней части */
+    justify-content: flex-end; 
     height: 100%; /* Полная высота родительского контейнера */
     position: relative;
     margin-top: -50px; /* Поднимает секцию вверх */
@@ -89,13 +89,13 @@ h4 {
 /* Логотип наложенный сверху */
 .logo-overlay {
     position: absolute;
-    top: -3%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
+    top: -1%; /* Сдвиг вверх, чтобы вывести логотип за пределы контейнера */
     left: 40px; /* Сдвиг влево */
     width: 250px; /* Ширина логотипа */
     height: 250px;
     box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.6); /* Тень вокруг логотипа */
     border-radius: 7%; /* Закругленные углы для логотипа */
-    z-index: 10; /* Разместить поверх других элементов */
+    /* z-index: 10;  */
     overflow: visible; /* Позволяем логотипу выходить за пределы */
 }
 
@@ -105,7 +105,7 @@ h4 {
     background-color: transparent; /* Убираем фон */
     padding: 70;
     cursor: pointer;
-    margin-top: 50px; /* Поднимает кнопку вверх */
+    margin-top: 60px; /* Поднимает кнопку вверх */
 }
 
 .image-container {
@@ -114,7 +114,6 @@ h4 {
     border-radius: 50%; /* Делаем контейнер круглым */
     overflow: hidden; /* Скрываем лишние части изображения */
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3); /* Тень вокруг круга */
-    margin-left: 15px;
 }
 
 .image-container img {
@@ -144,13 +143,12 @@ h4 {
     word-wrap: break-word; /* Переносим длинные слова */
 }
 
-
 /* Социальные иконки */
 .social-icons {
     display: flex;
     flex-direction: column; /* Отображаем иконки в столбик */
     justify-content: center;
-    margin-top: -420px;
+    margin-top: -410px;
 }
 
 .social-icons a {
