--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h4 {
     padding: 40px;
     background-color: #D8E1EC;
     border-radius: 15px;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3); */
     margin: 50px auto;
     overflow: visible; /* Позволяем элементам выходить за пределы контейнера */
 }
@@ -188,5 +188,5 @@ h4 {
 }
 
 .history-info {
-    font-size: 14px;
+    font-size: 16px;
 }
