--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ body {
     display: flex;
     justify-content: center; /* Центрирование по горизонтали */
     align-items: center; /* Центрирование по вертикали */
-    height: 100vh; /* Высота 100% от высоты экрана */
+    width: 100vw;            /* Занимаем всю ширину экрана */
+    height: 100vh;           /* Занимаем всю высоту экрана */
     background-color: #D8E1EC; /* Цвет фона */
 }
 
@@ -59,7 +60,7 @@ h4 {
     justify-content: flex-end; 
     height: 100%; /* Полная высота родительского контейнера */
     position: relative;
-    margin-top: -50px; /* Поднимает секцию вверх */
+    margin-top: -30px; /* Поднимает секцию вверх */
 }
 
 .left-section h1 {
@@ -117,7 +118,7 @@ h4 {
     background-color: transparent; /* Убираем фон */
     padding: 70;
     cursor: pointer;
-    margin-top: 60px; /* Поднимает кнопку вверх */
+    margin-top: 80px; /* Поднимает кнопку вверх */
 }
 
 .image-container {
@@ -160,7 +161,7 @@ h4 {
     display: flex;
     flex-direction: column; /* Отображаем иконки в столбик */
     justify-content: center;
-    margin-top: -410px;
+    margin-top: -395px;
 }
 
 .social-icons a {
@@ -203,11 +204,3 @@ h4 {
     font-size: 16px;
 }
 
-/* Media Query для экранов меньше 768px (типично для телефонов) */
-@media screen and (max-width: 768px) {
-    .outer-container {
-        width: 100%; /* Устанавливаем ширину контейнера 100% от ширины экрана */
-        margin: 0 20px; /* Небольшие отступы по бокам */
-        box-sizing: border-box; /* Включаем отступы и бордер в расчет ширины */
-    }
-}
